# nnmf-rs

./: Cargo.toml
data/YA04/: YA04_EMG_L.csv  YA04_EMG_R.csv
data/YA05/: YA05_EMG_L.csv  YA05_EMG_R.csv
data/YA06/: YA06_EMG_L.csv  YA06_EMG_R.csv
data/YA07/: YA07_EMG_L.csv  YA07_EMG_R.csv
data/YA08/: YA08_EMG_L.csv  YA08_EMG_R.csv
data/YA09/: YA09_EMG_L.csv  YA09_EMG_R.csv
data/YA10/: YA10_EMG_L.csv  YA10_EMG_R.csv
data/YA11/: YA11_EMG_L.csv  YA11_EMG_R.csv
data/YA12/: YA12_EMG_L.csv  YA12_EMG_R.csv
data/YA13/: YA13_EMG_L.csv  YA13_EMG_R.csv
data/YA14/: YA14_EMG_L.csv  YA14_EMG_R.csv
data/YA15/: YA15_EMG_L.csv  YA15_EMG_R.csv
data/YA17/: YA17_EMG_L.csv  YA17_EMG_R.csv
data/YA19/: YA19_EMG_L.csv  YA19_EMG_R.csv
data/YA20/: YA20_EMG_L.csv  YA20_EMG_R.csv
data/YA21/: YA21_EMG_L.csv  YA21_EMG_R.csv
data/YA22/: YA22_EMG_L.csv  YA22_EMG_R.csv
data/YA23/: YA23_EMG_L.csv  YA23_EMG_R.csv
data/YA26/: YA26_EMG_L.csv  YA26_EMG_R.csv
data/YA27/: YA27_EMG_L.csv  YA27_EMG_R.csv
data/YA28/: YA28_EMG_L.csv  YA28_EMG_R.csv
data/YA29/: YA29_EMG_L.csv  YA29_EMG_R.csv
data/YA30/: YA30_EMG_L.csv  YA30_EMG_R.csv
data/YA31/: YA31_EMG_L.csv  YA31_EMG_R.csv
data/YA32/: YA32_EMG_L.csv  YA32_EMG_R.csv
data/YA34/: YA34_EMG_L.csv  YA34_EMG_R.csv
examples/: Example_EMG_data.csv  Example_EMG_results.csv  NNMF test CSV.csv  example_matrix.csv  nnmf.m  nnmf_Jessica.m
src/: convert_mat.ipynb  main.rs  mod.rs
src/alg/: alsa.rs  lsmu.rs  mod.rs  nnls.rs
src/gpu/: component_wise_mul.rs  component_wise_mul_div.rs  (+6 more)
sub_proj_to_be_reconciled/: Cargo.toml
(+722 files in other folders)
