[package]
name = "nnmf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.32.4", features = ["rand"]}
ndarray = "0.15.6"
csv = "1.1"
approx = "0.5.1"
env_logger = "0.9.1"
pollster = "0.2.5"
futures-intrusive = "0.4"
bytemuck = { version = "1.12.1", features = ["derive"] }
wgpu = "0.19.4"

[dependencies.sandblast]
path = "../sandblast"
